@@ -1,6 +1,8 @@
 Revision history for Dist-Zilla-Plugin-ModuleBuildTiny
 
 {{$NEXT}}
+          detect minimum perl version from configure, build, test and runtime
+          phases instead of just runtime
 
 0.008     2014-10-30 16:05:29+01:00 Europe/Amsterdam
           Build.PL is now created at the correct phase (gather_files), with
